hover over snapchat fa icon to show snapchat code (and hide the fa icon when code is showing) misalignment issue still exists

--- a/ubyssey/static/src/styles/modules/_header.scss
+++ b/ubyssey/static/src/styles/modules/_header.scss
@@ -34,17 +34,25 @@ div.branding {
 
   .right {
     text-align: right;
+    #header-snapchat {
+        &:hover {
+            color: #fff;
+            .snapchat-code {
+                display: inline-block;
+            }
+        }
+    }
+
+    img.snapchat-code {
+        display: none;
+        width: 50px;
+        height: 50px;
+    }
     a {
       margin-right: 20px;
       font-size: 15px;
       &:last-child {
         margin-right: 0;
-      }
-      .fa-snapchat {
-
-      }
-      .snapchat-code {
-
       }
     }
   }
